fix(loading): faster loading bar on mobile

--- a/assets/styles/templates/partials/_navbar.scss
+++ b/assets/styles/templates/partials/_navbar.scss
@@ -43,10 +43,11 @@
     right: 100%;
 
     &.is-loading {
-        transition: right 5s var(--easing);
+        transition: right 3s var(--easing);
         right: 50%;
+
         @include touch {
-            right: 80%;
+            right: 30%;
         }
     }
 
